Final/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: oles-test
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
