Final/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "olesia.danit.watashinoheyadesu.pp.ua"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
